@@ -4,6 +4,10 @@ subdirs:	$(SUBDIRS)
 
 $(SUBDIRS):
 		$(MAKE) -C $@
+plots:
+		for dir in $(SUBDIRS); do \
+		  $(MAKE) -C $$dir plots; \
+		done
 
 clean:
 		for dir in $(SUBDIRS); do \
